--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.3.4 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,31 +28,29 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.17.5
   cupertino_icons: ^1.0.2
   custom_map_markers: ^0.0.2+1
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.1
-  cloud_firestore: ^4.8.2
+  dio: ^5.7.0
+  firebase_auth: ^4.20.0
+  firebase_core: ^2.32.0
+  firebase_storage: ^11.7.7
   flutter:
     sdk: flutter
   flutter_easyloading: ^3.0.5
   flutter_rating_bar: ^4.0.1
-
+  flutter_svg_provider: ^1.0.7
   flutter_timezone: ^1.0.6
   get_it: ^7.6.0
   google_maps_flutter: ^2.3.1
   http: ^1.1.0
-  image_picker: ^1.0.8
+  image_picker: ^1.1.2
   intl: ^0.19.0
   otp_pin_field: ^1.2.0+2
-  shared_preferences: ^2.1.2
+  path_provider: ^2.1.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
